@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 2.8.9)
 project(PothosFlow CXX)
 
 if(${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
-    find_package(Pothos "0.5.0" CONFIG REQUIRED)
+    find_package(Pothos "0.6.0" CONFIG REQUIRED)
 else()
     find_package(Pothos CONFIG REQUIRED) #in-tree build
 endif()
